Inclusão de títulos e nome da coluna da tabela.

--- a/react-tutorial/public/index.html
+++ b/react-tutorial/public/index.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Criação de tabela e formulário segundo o tutorial fornecido em https://www.taniarascia.com/how-to-connect-to-an-api-with-javascript/"
         />
         <title>FORM - React_Tutorial</title>
     </head>
